--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "homepage": "https://SpencerFalor-Ward.github.io/hw-unit20-reactPortfolio",
+  "homepage": "https://ryan-antonelli.github.io/NewPortfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
